Finished with site. Going back to fix small things such as text scaling on mobile screens and other scaling/css issues

--- a/mcgeehan-construction/my-vite-tailwind-app/src/index.css
+++ b/mcgeehan-construction/my-vite-tailwind-app/src/index.css
@@ -5,6 +5,7 @@
     --color-dark-blue: #23263e;
     --font-display: 'Inter', sans serif;
     --breakpoint-med: 58rem;
+    --breakpoint-smal: 40rem;
   }
 
 
